#1 Added DDD structure, fixed packages names
